"Organization and Documentation Update"
Documenting Updates:

	- Adding comments before container opening tags to explain said containers
	- Adding comments on the closing tags to better show what they
	  are closing

Organization Updates:

	- Updated div containing grid manipulation options, replacing
	  div with header to better present my vision for the site
	- Updated div containing color manipulation options, replacing
	  div with footer to better present my vision for the site
	- Added indenting and spacing between elements to promote better
	  visibility

--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
         <link href="/css/index.css" rel="stylesheet">
     </head>
     <body>
-        <div id="grid-manipulation">
-            <button class="grid-manipulation-buttons">Add Row</button>
-            <button class="grid-manipulation-buttons">Add Column</button>
-            <button class="grid-manipulation-buttons">Remove Row</button>
-            <button class="grid-manipulation-buttons">Remove Column</button>
-            <button class="grid-manipulation-buttons">Reset</button>
-        </div>
-        <div id="grid-area">
 
+            <!-- Holds All Grid Manipulation Options -->
+            <footer id="grid-manipulation">
+                <button class="grid-manipulation-buttons">Add Row</button>
+                <button class="grid-manipulation-buttons">Add Column</button>
+                <button class="grid-manipulation-buttons">Remove Row</button>
+                <button class="grid-manipulation-buttons">Remove Column</button>
+                <button class="grid-manipulation-buttons">Reset</button>
+            <!-- Closes #grid-manipulation -->
+            </footer>
+
+        <div id="grid-area">
+        <!-- Closes #grid-area -->
         </div>
+
         <div id="color-settings">
             <button class="paint-manipulation-buttons">Fill Unedited</button>
             <button class="paint-manipulation-buttons">Fill ALL</button>
@@ -33,8 +38,11 @@
                     <button class="color-btns">Black</button>
                     <button class="color-btns">White</button>
                     <button class="color-btns">Yellow</button>
+                <!-- Closes #colors-list -->
                 </div>
+            <!-- Closes #color-menu -->
             </div>
+        <!-- Closes #color-settings -->
         </div>
     </body>
 </html>
