--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html>
+
     <head>
+
         <title>
             Assignment 5 for TTP
         </title>
+
         <meta name="author" content="Rafid, Max, and Zijinhui">
         <link href="/css/index.css" rel="stylesheet">
+
     </head>
+
     <body>
 
-            <!-- Holds All Grid Manipulation Options -->
-            <footer id="grid-manipulation">
-                <button class="grid-manipulation-buttons">Add Row</button>
-                <button class="grid-manipulation-buttons">Add Column</button>
-                <button class="grid-manipulation-buttons">Remove Row</button>
-                <button class="grid-manipulation-buttons">Remove Column</button>
-                <button class="grid-manipulation-buttons">Reset</button>
-            <!-- Closes #grid-manipulation -->
-            </footer>
+        <!-- Holds All Grid Manipulation Options -->
+        <header id="grid-manipulation">
 
-        <div id="grid-area">
+            <button class="grid-manipulation-buttons">Add Row</button>
+            <button class="grid-manipulation-buttons">Add Column</button>
+            <button class="grid-manipulation-buttons">Remove Row</button>
+            <button class="grid-manipulation-buttons">Remove Column</button>
+            <button class="grid-manipulation-buttons">Reset</button>
+
+        <!-- Closes #grid-manipulation -->
+        </header>
+
+        <!-- Contains picture area -->
+        <main id="grid-area">
+        
         <!-- Closes #grid-area -->
-        </div>
+        </main>
 
-        <div id="color-settings">
+        <!-- Holds All Color Options -->
+        <footer id="color-settings">
+
             <button class="paint-manipulation-buttons">Fill Unedited</button>
             <button class="paint-manipulation-buttons">Fill ALL</button>
             <button class="paint-manipulation-buttons">Clear All</button>
+
+            <!-- Dropdown Menu For Colors -->
             <div id="color-menu">
+
                 <button id="color-menu-button" class="paint-manipulation-buttons">Colors</button>
+
+                <!-- Dropdown menu content -->
                 <div id="colors-list">
+
                     <button class="color-btns">Blue</button>
                     <button class="color-btns">Red</button>
                     <button class="color-btns">Green</button>
@@ -38,11 +55,16 @@
                     <button class="color-btns">Black</button>
                     <button class="color-btns">White</button>
                     <button class="color-btns">Yellow</button>
+
                 <!-- Closes #colors-list -->
                 </div>
+
             <!-- Closes #color-menu -->
             </div>
+
         <!-- Closes #color-settings -->
-        </div>
+        </footer>
+
     </body>
+
 </html>
