"Dropdown Menu Styling"
Finalizing Changes in Dropdown Menu:

	- Moved dropdown menu and logic under the footer changes
	- Removed marginal space from dropdown menu and colors button
	- Made dropdown menu content the same size as actual menu button
	- Allowed the height of the dropdown menu to fit the content

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <!-- Dropdown menu content -->
                 <div id="colors-list">
 
-                    <button class="color-btns">Blue</button>
-                    <button class="color-btns">Red</button>
-                    <button class="color-btns">Green</button>
-                    <button class="color-btns">Pink</button>
-                    <button class="color-btns">Orange</button>
-                    <button class="color-btns">Black</button>
-                    <button class="color-btns">White</button>
-                    <button class="color-btns">Yellow</button>
+                    <button id="blue" class="color-btns"></button>
+                    <button id="red" class="color-btns"></button>
+                    <button id="green" class="color-btns"></button>
+                    <button id="pink" class="color-btns"></button>
+                    <button id="orange" class="color-btns"></button>
+                    <button id="black" class="color-btns"></button>
+                    <button id="white" class="color-btns"></button>
+                    <button id="yellow" class="color-btns"></button>
 
                 <!-- Closes #colors-list -->
                 </div>
