Initializing Commit For Logic Branch

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <!-- Closes #color-settings -->
         </footer>
 
+    <script src="/javascript/index.js"></script>
     </body>
 
 </html>
