"Creation of Paint Grid"
By using a table element and using buttons as the indivisual cells, the
logic portion of this task starts.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
 
         <!-- Contains picture area -->
         <main id="grid-area">
-        
+
+            <table>
+
+                <tr>
+
+                  <td><button class="color-grid"></button></td>
+                
+                </tr>
+
+            </table>
+
         <!-- Closes #grid-area -->
         </main>
 
