Created the logic behind the add row button, closes #7

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
     </head>
 
     <body>
-
         <!-- Holds All Grid Manipulation Options -->
         <header id="grid-manipulation">
 
-            <button class="grid-manipulation-buttons">Add Row</button>
-            <button class="grid-manipulation-buttons">Add Column</button>
-            <button class="grid-manipulation-buttons">Remove Row</button>
-            <button class="grid-manipulation-buttons">Remove Column</button>
-            <button class="grid-manipulation-buttons">Reset</button>
+            <button class="grid-manipulation-buttons" id = "add-row">Add Row</button>
+            <button class="grid-manipulation-buttons" id = "add-column">Add Column</button>
+            <button class="grid-manipulation-buttons" id = "remove-row">Remove Row</button>
+            <button class="grid-manipulation-buttons" id = "remove-column">Remove Column</button>
+            <button class="grid-manipulation-buttons" id = "reset">Reset</button>
 
         <!-- Closes #grid-manipulation -->
         </header>
@@ -29,12 +28,10 @@
         <!-- Contains picture area -->
         <main id="grid-area">
 
-            <table>
+            <table id = "main-table">
 
                 <tr>
-
-                  <td><button class="color-grid"></button></td>
-                
+                    <td><button class = "color-grid"></button></td>
                 </tr>
 
             </table>
