Fixed navigational errors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </title>
 
         <meta name="author" content="Rafid, Max, and Zijinhui">
-        <link href="/css/index.css" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
 
     </head>
 
