change_paint_manipulation_buttons' id

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <!-- Holds All Color Options -->
         <footer id="color-settings">
 
-            <button class="paint-manipulation-buttons">Fill Unedited</button>
-            <button class="paint-manipulation-buttons">Fill ALL</button>
-            <button class="paint-manipulation-buttons">Clear All</button>
+            <button id="paint-fillUnedited-buttons">Fill Unedited</button>
+            <button id="paint-fillAll-buttons">Fill ALL</button>
+            <button id="paint-clearAll-buttons">Clear All</button>
 
             <!-- Dropdown Menu For Colors -->
             <div id="color-menu">
