Before merge holding-colors branch

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                 <!-- Dropdown menu content -->
                 <div id="colors-list">
 
-                    <button id="blue" class="color-btns"></button>
-                    <button id="red" class="color-btns"></button>
-                    <button id="green" class="color-btns"></button>
-                    <button id="pink" class="color-btns"></button>
-                    <button id="orange" class="color-btns"></button>
-                    <button id="black" class="color-btns"></button>
-                    <button id="white" class="color-btns"></button>
-                    <button id="yellow" class="color-btns"></button>
+                    <button id="blue" class="color-btns" onClick="reply_click(this.id)"></button>
+                    <button id="red" class="color-btns" onClick="reply_click(this.id)"></button>
+                    <button id="green" class="color-btns" onClick="reply_click(this.id)"></button>
+                    <button id="pink" class="color-btns" onClick="reply_click(this.id)"></button>
+                    <button id="orange" class="color-btns" onClick="reply_click(this.id)"></button>
+                    <button id="black" class="color-btns" onClick="reply_click(this.id)"></button>
+                    <button id="white" class="color-btns" onClick="reply_click(this.id)"></button>
+                    <button id="yellow" class="color-btns" onClick="reply_click(this.id)"></button>
 
                 <!-- Closes #colors-list -->
                 </div>
